Fixes 21.06.21. Added microdata for products & collections

--- a/app/page-brands-single.html
+++ b/app/page-brands-single.html
@@ -1,4 +1,4 @@
-@@include('parts/header.html', { title: 'Каталог' })
+@@include('parts/header.html', { title: 'Производители: 41ZERO42' })
 
 <main class="page-main">
 
@@ -31,12 +31,12 @@
 
 			<!-- Section: About brand -->
 			<section class="about">
-				<div class="about-heading dropdown">
-					<button type="button" class="about-heading-btn btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<div class="about-heading">
+					<button type="button" class="about-heading-btn btn btn-dropdown">
 						<span>Коллекции 41zero42</span>
 						<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 					</button>
-					<div class="about-heading-dropdown dropdown-menu">
+					<div class="about-heading-dropdown">
 						<ul class="row row-items-8 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 row-cols-xl-6">
 							<li class="col"><a href="#">ABK</a></li>
 							<li class="col"><a href="#">ABSOLUT CERAMICA</a></li>
