--- a/app/page-cart.html
+++ b/app/page-cart.html
@@ -1,4 +1,4 @@
-@@include('parts/header.html', { title: 'Каталог' })
+@@include('parts/header.html', { title: 'Корзина и оформление' })
 
 <main class="page-main">
 
