--- a/app/page-brands.html
+++ b/app/page-brands.html
@@ -1,4 +1,4 @@
-@@include('parts/header.html', { title: 'Каталог' })
+@@include('parts/header.html', { title: 'Производители' })
 
 <main class="page-main">
 
