--- a/app/page-products.html
+++ b/app/page-products.html
@@ -1,4 +1,4 @@
-@@include('parts/header.html', { title: 'Категория: колекции' })
+@@include('parts/header.html', { title: 'Товары' })
 
 <main class="page-main">
 
