--- a/app/page-search.html
+++ b/app/page-search.html
@@ -1,4 +1,4 @@
-@@include('parts/header.html', { title: 'Каталог' })
+@@include('parts/header.html', { title: 'Результаты поиска' })
 
 <main class="page-main">
 
