--- a/app/parts/collection-cards/collection-1.html
+++ b/app/parts/collection-cards/collection-1.html
@@ -1,4 +1,4 @@
-<div class="card card-collection">
+<div class="card card-collection" itemscope itemtype="http://schema.org/Product">
 	<div class="card-shadow"></div>
 	<div class="card-photo zoom-photo img-cover">
 		<div class="card-photo-btn">
@@ -9,58 +9,61 @@
 			<a href="./images/collections/2.jpg" data-fancybox="collection-gallery-1"></a>
 		</div>
 		<a href="page-collection.html">
+			<meta itemprop="image" content="./images/collections/1.jpg">
 			<img src="./images/collections/1.jpg" alt="">
 		</a>
 	</div>
 	<div class="card-meta">
-		<a href="page-collection.html" class="permalink">CHARME ADVANCE FLOOR PROJECT</a>
+		<a href="page-collection.html" class="permalink" itemprop="name">CHARME ADVANCE FLOOR PROJECT</a>
 		<div class="product-country">
 			<span>Italon,</span>
 			<img src="./images/flags/011-italy.svg" alt="Италия">
 			<span>Италия</span>
 		</div>
-		<div class="product-price">от <span>5300</span> ₽</div>
+		<div class="product-price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+			от <span>5300</span> ₽
+			<meta itemprop="price" content="5300">
+			<meta itemprop="priceCurrency" content="RUB">
+		</div>
 	</div>
 	<div class="card-details">
 		<div class="exemplars">
 			<div class="exemplars-item">
 				<span class="exemplars-title">Керамогранит</span>
 				<ul class="exemplars-list">
-					<li><img src="./images/collections/exemplars/1.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/2.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/3.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/4.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/1.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/2.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/5.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/6.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/7.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/8.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/1.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/2.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/3.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/4.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/1.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/2.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/5.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/6.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/7.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/8.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/3.jpg" alt=""></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/1.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/2.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/3.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/4.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/1.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/2.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/5.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/6.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/7.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/8.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/1.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/2.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/3.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/4.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/1.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/2.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/5.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/6.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/7.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/8.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/3.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
 				</ul>
 			</div>
 			<div class="exemplars-item">
 				<span class="exemplars-title">Мозаика</span>
 				<ul class="exemplars-list">
-					<li><img src="./images/collections/exemplars/1.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/2.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/7.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/4.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/1.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/2.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/5.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/6.jpg" alt=""></li>
-					<li><img src="./images/collections/exemplars/1.jpg" alt=""></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/1.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/2.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/3.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/6.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/7.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/8.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
+					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/3.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
 				</ul>
 			</div>
 			<div class="exemplars-more">
