Microdata fixes. Collection cards in two column on mobile

--- a/app/page-brands-single.html
+++ b/app/page-brands-single.html
@@ -16,7 +16,7 @@
 						<meta itemprop="position" content="1">
 					</li>
 					<li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
-						<span itemprop="item"><span itemprop="name">41ZERO42</span></span>
+						<span itemprop="name">41ZERO42</span>
 						<meta itemprop="position" content="2">
 					</li>
 				</ul>
@@ -124,7 +124,7 @@
 			</div>
 
 			<!-- Collections list -->
-			<div class="row row-items-48 row-cols-1 row-cols-md-2 row-cols-xl-3">
+			<div class="row row-items-48 row-cols-1 row-cols-sm-2 row-cols-xl-3">
 				<div class="col">
 					@@include('parts/collection-cards/collection-1.html')
 				</div><!-- /.col -->
