--- a/app/page-search.html
+++ b/app/page-search.html
@@ -12,7 +12,7 @@
 						<meta itemprop="position" content="0">
 					</li>
 					<li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
-						<span itemprop="item"><span itemprop="name">Результаты поиска: Плитка</span></span>
+						<span itemprop="name">Результаты поиска: Плитка</span>
 						<meta itemprop="position" content="1">
 					</li>
 				</ul>
