--- a/app/parts/collection-cards/collection-1.html
+++ b/app/parts/collection-cards/collection-1.html
@@ -14,7 +14,9 @@
 		</a>
 	</div>
 	<div class="card-meta">
-		<a href="page-collection.html" class="permalink" itemprop="name">CHARME ADVANCE FLOOR PROJECT</a>
+		<div class="product-link" itemprop="name">
+			<a href="page-collection.html" class="permalink">CHARME ADVANCE FLOOR PROJECT</a>
+		</div>
 		<div class="product-country">
 			<span>Italon,</span>
 			<img src="./images/flags/011-italy.svg" alt="Италия">
@@ -48,10 +50,7 @@
 					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/1.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
 					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/2.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
 					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/5.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
-					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/6.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
-					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/7.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
 					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/8.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
-					<li><a href="page-product.html" style="background-image: url('./images/collections/exemplars/3.jpg')" title="Керамогранит Kerama Marazzi 60х119,5"></a></li>
 				</ul>
 			</div>
 			<div class="exemplars-item">
