--- a/app/page-collections.html
+++ b/app/page-collections.html
@@ -16,7 +16,7 @@
 						<meta itemprop="position" content="1">
 					</li>
 					<li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
-						<span itemprop="item"><span itemprop="name">Плитка для ванной</span></span>
+						<span itemprop="name">Плитка для ванной</span>
 						<meta itemprop="position" content="2">
 					</li>
 				</ul>
@@ -46,7 +46,7 @@
 			@@include('parts/shop/shop-filters.html')
 
 			<!-- Collections list -->
-			<div class="row row-items-48 row-cols-1 row-cols-md-2 row-cols-xl-3">
+			<div class="row row-items-48 row-cols-1 row-cols-sm-2 row-cols-xl-3">
 				<div class="col">
 					@@include('parts/collection-cards/collection-1.html')
 				</div><!-- /.col -->
