--- a/app/page-products.html
+++ b/app/page-products.html
@@ -16,7 +16,7 @@
 						<meta itemprop="position" content="1">
 					</li>
 					<li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
-						<span itemprop="item"><span itemprop="name">Плитка для ванной</span></span>
+						<span itemprop="name">Плитка для ванной</span>
 						<meta itemprop="position" content="2">
 					</li>
 				</ul>
