--- a/app/parts/collection-cards/collection-2.html
+++ b/app/parts/collection-cards/collection-2.html
@@ -14,7 +14,9 @@
 		</a>
 	</div>
 	<div class="card-meta">
-		<a href="page-collection.html" class="permalink" itemprop="name">CHARME ADVANCE FLOOR PROJECT</a>
+		<div class="product-link" itemprop="name">
+			<a href="page-collection.html" class="permalink">CHARME ADVANCE FLOOR PROJECT</a>
+		</div>
 		<div class="product-country">
 			<span>Italon,</span>
 			<img src="./images/flags/011-italy.svg" alt="Италия">
