--- a/app/parts/product-cards/product-1.html
+++ b/app/parts/product-cards/product-1.html
@@ -7,7 +7,9 @@
 		</a>
 	</div>
 	<div class="card-meta">
-		<a href="page-product.html" class="permalink" itemprop="name">Керамогранит Italon Класс Блэк 45x45</a>
+		<div class="product-link" itemprop="name">
+			<a href="page-product.html" class="permalink">Керамогранит Italon Класс Блэк 45x45</a>
+		</div>
 		<div class="product-country">
 			<span>Italon,</span>
 			<img src="./images/flags/228-russia.svg" alt="Россия">
