Added collection card preloader. Gulp gif files watch

--- a/app/page-product.html
+++ b/app/page-product.html
@@ -153,58 +153,58 @@
 					<div class="col-xxl-3 order-2 order-xxl-1">
 
 						<!-- Attributes -->
-						<table class="attributes table-attributes">
-							<tbody>
-								<tr>
-									<td class="attribute">Фабрика::</td>
-									<td class="value"><a href="#">Concorde Russia</a></td>
-								</tr>
-								<tr>
-									<td class="attribute">Коллекция:</td>
-									<td class="value"><a href="#">Mediterranea / Медитеррия</a></td>
-								</tr>
-								<tr>
-									<td class="attribute">Код:</td>
-									<td class="value">0534625</td>
-								</tr>
-								<tr>
-									<td class="attribute">Производитель:</td>
-									<td class="value"><a href="#">Orinda</a></td>
-								</tr>
-								<tr>
-									<td class="attribute">Страна:</td>
-									<td class="value"><a href="#">Индия</a></td>
-								</tr>
-								<tr>
-									<td class="attribute">Размер:</td>
-									<td class="value">60 × 60, 80 × 80</td>
-								</tr>
-								<tr>
-									<td class="attribute">Поверхность:</td>
-									<td class="value">Глянцевая</td>
-								</tr>
-								<tr>
-									<td class="attribute">Применение:</td>
-									<td class="value">Для ванной, для гостинной, для общественных помещений</td>
-								</tr>
-								<tr>
-									<td class="attribute">Стиль:</td>
-									<td class="value">Современный</td>
-								</tr>
-								<tr>
-									<td class="attribute">Рисунок:</td>
-									<td class="value">Террацо</td>
-								</tr>
-								<tr>
-									<td class="attribute">Геометрическая форма:</td>
-									<td class="value">Квадрат, Прямоугольник</td>
-								</tr>
-								<tr>
-									<td class="attribute">Материал:</td>
-									<td class="value">Керамогранит</td>
-								</tr>
-							</tbody>
-						</table>
+						<div class="attributes">
+							<ul class="attributes-list">
+								<li>
+									<div class="attribute">Фабрика:</div>
+									<div class="value"><a href="#">Concorde Russia</a></div>
+								</li>
+								<li>
+									<div class="attribute">Коллекция:</div>
+									<div class="value"><a href="#">Mediterranea / Медитеррия</a></div>
+								</li>
+								<li>
+									<div class="attribute">Код:</div>
+									<div class="value">0534625</div>
+								</li>
+								<li>
+									<div class="attribute">Производитель:</div>
+									<div class="value"><a href="#">Orinda</a></div>
+								</li>
+								<li>
+									<div class="attribute">Страна:</div>
+									<div class="value"><a href="#">Индия</a></div>
+								</li>
+								<li>
+									<div class="attribute">Размер:</div>
+									<div class="value">60 × 60, 80 × 80</div>
+								</li>
+								<li>
+									<div class="attribute">Поверхность:</div>
+									<div class="value">Глянцевая</div>
+								</li>
+								<li>
+									<div class="attribute">Применение:</div>
+									<div class="value">Для ванной, для гостинной, для общественных помещений</div>
+								</li>
+								<li>
+									<div class="attribute">Стиль:</div>
+									<div class="value">Современный</div>
+								</li>
+								<li>
+									<div class="attribute">Рисунок:</div>
+									<div class="value">Террацо</div>
+								</li>
+								<li>
+									<div class="attribute">Геометрическая форма:</div>
+									<div class="value">Квадрат, Прямоугольник</div>
+								</li>
+								<li>
+									<div class="attribute">Материал:</div>
+									<div class="value">Керамогранит</div>
+								</li>
+							</ul>
+						</div>
 
 					</div><!-- /.col -->
 
