--- a/app/page-product.html
+++ b/app/page-product.html
@@ -156,51 +156,51 @@
 						<div class="attributes">
 							<ul class="attributes-list">
 								<li>
-									<div class="attribute">Фабрика:</div>
+									<div class="attr">Фабрика:</div>
 									<div class="value"><a href="#">Concorde Russia</a></div>
 								</li>
 								<li>
-									<div class="attribute">Коллекция:</div>
+									<div class="attr">Коллекция:</div>
 									<div class="value"><a href="#">Mediterranea / Медитеррия</a></div>
 								</li>
 								<li>
-									<div class="attribute">Код:</div>
+									<div class="attr">Код:</div>
 									<div class="value">0534625</div>
 								</li>
 								<li>
-									<div class="attribute">Производитель:</div>
+									<div class="attr">Производитель:</div>
 									<div class="value"><a href="#">Orinda</a></div>
 								</li>
 								<li>
-									<div class="attribute">Страна:</div>
+									<div class="attr">Страна:</div>
 									<div class="value"><a href="#">Индия</a></div>
 								</li>
 								<li>
-									<div class="attribute">Размер:</div>
+									<div class="attr">Размер:</div>
 									<div class="value">60 × 60, 80 × 80</div>
 								</li>
 								<li>
-									<div class="attribute">Поверхность:</div>
+									<div class="attr">Поверхность:</div>
 									<div class="value">Глянцевая</div>
 								</li>
 								<li>
-									<div class="attribute">Применение:</div>
+									<div class="attr">Применение:</div>
 									<div class="value">Для ванной, для гостинной, для общественных помещений</div>
 								</li>
 								<li>
-									<div class="attribute">Стиль:</div>
+									<div class="attr">Стиль:</div>
 									<div class="value">Современный</div>
 								</li>
 								<li>
-									<div class="attribute">Рисунок:</div>
+									<div class="attr">Рисунок:</div>
 									<div class="value">Террацо</div>
 								</li>
 								<li>
-									<div class="attribute">Геометрическая форма:</div>
+									<div class="attr">Геометрическая форма:</div>
 									<div class="value">Квадрат, Прямоугольник</div>
 								</li>
 								<li>
-									<div class="attribute">Материал:</div>
+									<div class="attr">Материал:</div>
 									<div class="value">Керамогранит</div>
 								</li>
 							</ul>
