--- a/app/parts/collection-cards/collection-1.html
+++ b/app/parts/collection-cards/collection-1.html
@@ -77,7 +77,7 @@
 			</div>
 		</div>
 		<div class="attributes">
-			<ul>
+			<ul class="attributes-list">
 				<li><div class="attr">Поверхность:</div> <div class="value">Матовая, Глянцевая</div></li>
 				<li><div class="attr">Размер, см:</div> <div class="value">60 × 60, 80 × 60</div></li>
 				<li><div class="attr">Материал:</div> <div class="value">Керамика, Керамогранит</div></li>
