Shop filters function refactoring. Show more exemplars function refactoring

--- a/app/parts/collection-cards/collection-2.html
+++ b/app/parts/collection-cards/collection-2.html
@@ -30,6 +30,9 @@
 	</div>
 	<div class="card-details">
 		<div class="exemplars">
+			<div class="exemplars-cloned">
+				<ul class="exemplars-cloned-list"></ul>
+			</div>
 			<div class="exemplars-item">
 				<span class="exemplars-title">Декор</span>
 				<ul class="exemplars-list">
