--- a/app/parts/shop/shop-filters.html
+++ b/app/parts/shop/shop-filters.html
@@ -34,7 +34,7 @@
 					<div class="dropdown-menu">
 						<div class="shop-filters-list">
 							<div class="form-checkbox form-checkbox-sm">
-								<input type="checkbox" id="s-filter-1">
+								<input type="checkbox" id="s-filter-1" checked>
 								<label for="s-filter-1" class="form-checkbox-label">Настенная</label>
 							</div>
 							<div class="form-checkbox form-checkbox-sm">
@@ -42,11 +42,11 @@
 								<label for="s-filter-2" class="form-checkbox-label">Напольная</label>
 							</div>
 							<div class="form-checkbox form-checkbox-sm">
-								<input type="checkbox" id="s-filter-3">
+								<input type="checkbox" id="s-filter-3" checked>
 								<label for="s-filter-3" class="form-checkbox-label">Мозаика</label>
 							</div>
 							<div class="form-checkbox form-checkbox-sm">
-								<input type="checkbox" id="s-filter-4">
+								<input type="checkbox" id="s-filter-4" checked>
 								<label for="s-filter-4" class="form-checkbox-label">Бежевая</label>
 							</div>
 						</div><!-- /.shop-filters-list -->
