--- a/app/parts/collection-cards/collection-1.html
+++ b/app/parts/collection-cards/collection-1.html
@@ -29,7 +29,10 @@
 		</div>
 	</div>
 	<div class="card-details">
-		<div class="exemplars _is-loading">
+		<div class="exemplars">
+			<div class="exemplars-cloned">
+				<ul class="exemplars-cloned-list"></ul>
+			</div>
 			<div class="exemplars-item">
 				<span class="exemplars-title">Керамогранит</span>
 				<ul class="exemplars-list">
