Added submenus for catalog & brands mobile menu. CSS fixes etc.

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
 			</style>
 
 			<div class="pages-logo mb-40">
-				<img src="./images/logotype.png" alt="Интернет-магазин Aplitka">
+				<img src="./images/logo.svg" alt="Интернет-магазин Aplitka">
 			</div>
 			<div class="row row-items-24">
 				<div class="col-sm-6">
