--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -7,7 +7,7 @@
 						<div class="footer-intro">
 							<div class="logo">
 								<a href="index.html" rel="home">
-									<img src="./images/logotype.png" alt="Интернет-магазин Aplitka">
+									<img src="./images/logo.svg" alt="Интернет-магазин Aplitka">
 								</a>
 							</div><!-- /.logo -->
 							<div class="stores">
