--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -91,7 +91,7 @@
 
 					<div class="col col-lg-auto align-self-center logotype">
 						<a href="index.html" rel="home">
-							<img src="./images/logotype.png" alt="Интернет-магазин Aplitka">
+							<img src="./images/logo.svg" alt="Интернет-магазин Aplitka">
 						</a>
 					</div><!-- /.logotype -->
 
@@ -247,7 +247,7 @@
 					</div><!-- /.contacts -->
 
 					<div class="col-auto align-self-center cart">
-						<a href="page-cart.html" class="cart-link">
+						<a href="page-cart.html" class="cart-link" data-quantity="5">
 							<div class="cart-icon">
 								<svg class="icon icon-cart"><use xlink:href="./images/symbol-defs.svg#cart"></use></svg>
 							</div>
