--- a/app/parts/shop/shop-filters.html
+++ b/app/parts/shop/shop-filters.html
@@ -56,27 +56,44 @@
 			<div class="col">
 				<div class="shop-filters-item dropdown">
 					<button type="button" class="btn btn-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<span class="shop-filters-name"><span class="key">Тип помещения</span> <span class="values"></span></span>
+						<span class="shop-filters-name"><span class="key">Размер</span> <span class="values"></span></span>
 						<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 					</button>
 					<div class="dropdown-menu">
 						<div class="shop-filters-list">
 							<div class="form-checkbox form-checkbox-sm">
 								<input type="checkbox" id="s-filter-5">
-								<label for="s-filter-5" class="form-checkbox-label">Настенная</label>
+								<label for="s-filter-5" class="form-checkbox-label">10х10</label>
 							</div>
 							<div class="form-checkbox form-checkbox-sm">
 								<input type="checkbox" id="s-filter-6">
-								<label for="s-filter-6" class="form-checkbox-label">Напольная</label>
+								<label for="s-filter-6" class="form-checkbox-label">15х15</label>
 							</div>
 							<div class="form-checkbox form-checkbox-sm">
 								<input type="checkbox" id="s-filter-7">
-								<label for="s-filter-7" class="form-checkbox-label">Мозаика</label>
+								<label for="s-filter-7" class="form-checkbox-label">20х20</label>
 							</div>
 							<div class="form-checkbox form-checkbox-sm">
 								<input type="checkbox" id="s-filter-8">
-								<label for="s-filter-8" class="form-checkbox-label">Бежевая</label>
+								<label for="s-filter-8" class="form-checkbox-label">30х30</label>
 							</div>
+							<div class="form-checkbox form-checkbox-sm">
+								<input type="checkbox" id="s-filter-9">
+								<label for="s-filter-9" class="form-checkbox-label">40х40</label>
+							</div>
+							<div class="form-checkbox form-checkbox-sm">
+								<input type="checkbox" id="s-filter-10">
+								<label for="s-filter-10" class="form-checkbox-label">45х45</label>
+							</div>
+							<div class="form-checkbox form-checkbox-sm">
+								<input type="checkbox" id="s-filter-11">
+								<label for="s-filter-11" class="form-checkbox-label">50х50</label>
+							</div>
+							<div class="form-checkbox form-checkbox-sm">
+								<input type="checkbox" id="s-filter-12">
+								<label for="s-filter-12" class="form-checkbox-label">60х60</label>
+							</div>
+						
 						</div><!-- /.shop-filters-list -->
 					</div><!-- /.dropdown-menu -->
 				</div><!-- /.shop-filters-item-->
@@ -90,12 +107,12 @@
 					<div class="dropdown-menu">
 						<div class="shop-filters-list">
 							<div class="form-checkbox form-checkbox-sm">
-								<input type="checkbox" id="s-filter-9">
-								<label for="s-filter-9" class="form-checkbox-label">Серая</label>
+								<input type="checkbox" id="s-filter-13">
+								<label for="s-filter-14" class="form-checkbox-label">Серая</label>
 							</div>
 							<div class="form-checkbox form-checkbox-sm">
 								<input type="checkbox" id="s-filter-10">
-								<label for="s-filter-10" class="form-checkbox-label">Черная</label>
+								<label for="s-filter-14" class="form-checkbox-label">Черная</label>
 							</div>
 						</div><!-- /.shop-filters-list -->
 					</div><!-- /.dropdown-menu -->
